# msgrpc

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  cmake_build.sh  cmake_generate.sh  vcpkg.json
.github/workflow/: build.yml
.github/workflows/: main.yml
msgrpc/: CMakeLists.txt  cmake_install.cmake  msgrpc.cpp
msgrpc/client/: CMakeLists.txt  client.cpp  client.h  cmake_install.cmake  transport.h
msgrpc/client/transport/: CMakeLists.txt  async_transport.h  tcp_transport.cpp  tcp_transport.h  transport.h
msgrpc/core/: CMakeLists.txt  call_handler.h  call_handler_base.cpp  call_handler_base.h  call_resolver.h  cmake_install.cmake  common.h  defines.h  message.h
msgrpc/system/: CMakeLists.txt  async_pool.cpp  async_pool.h  log.h
msgrpc/transport/: CMakeLists.txt  tcp_transport.cpp  tcp_transport.h  transport.h
msgrpc/util/: defer.h  error.h  expected.h  signal.h
scripts/: cmake_build.sh
tests/console/: CMakeLists.txt  main.cpp
